# arraylib

./: .gitignore  README.md  pyproject.toml
arraylib/: __init__.py  lib.py
arraylib/test/: test_arraylib.py
docs/: conf.py  index.rst
